apply intellij fixes